src/main/resources/tests/Semantics/bad/operationInteger2.canAda
with Ada.Text_IO; use Ada.Text_IO;
procedure ExampleProcedure is
X : integer;
begin
   X := 1 + 'e';
end ExampleProcedure;
